# fastblur

./: Cargo.toml  Makefile  README.md
examples/: blur.rs
src/: blur.rs  lib.rs  utils.rs  wasm.rs
tests/: lib.rs
web/: package.json  webpack.config.js
web/src/: demo.js  index.html
