[package]
name = "fastblur"
version = "0.1.0"
authors = ["Chen Min <chenmin@bestminr.com>", "Felix Schütt <felix.schuett@maps4print.com>"]
repository = "https://github.com/bestminr/fastblur"
homepage = "https://github.com/bestminr/fastblur"
license = "MIT"
description = "Linear-time gaussian blur"

[lib]
crate-type = [ "cdylib", "rlib" ]

[profile.release]
debug = false
lto = true

[dev-dependencies]
image = "0.15.0"

[dependencies]
wasm-bindgen = "0.2.43"
